Perform the animation for the main text and the logo when hover. Find a fix for the image flickering.

--- a/assets/css/topics.css
+++ b/assets/css/topics.css
@@ -29,10 +29,17 @@ body {
     position: absolute;
     top: 40px;
     left: 40px;
+    
 }
 
 .logo {
     height: 35px;
+}
+
+.logo:hover {
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
 }
 
 /*main text styles*/
@@ -46,6 +53,9 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+
+    /*this will fix the shakiness of the element contatiner*/
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -72,24 +82,7 @@ body {
 
     animation-name: moveInRight;
     animation-duration: 1s;
-
     animation-timing-function: ease-out;
-}
-
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-
-    80% {
-        transform: translateX(20px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
 
 }
 
@@ -100,7 +93,24 @@ body {
     }
 
     80% {
-        transform: translateX(-20px);
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(20px);
     }
 
     100% {
